--- a/main.css
+++ b/main.css
@@ -26,6 +26,45 @@ body {
   transition: transform .1s, background-color .6s;
   overflow: hidden;
 }
+.door2{
+  width: 80px;
+  height: 84px;
+  margin: 4px;
+  background-color: #555;
+  border: 3px solid #fff;
+  transform: skewX(14deg);
+}
+
+
+.door2:hover{
+  z-index: 9999;
+  border: 3px solid red;
+  background-color: greenyellow;
+  transform: rotate(180deg) perspective(150px) translateZ(50px) skewX(14deg);
+  transition: 1s;  
+}
+.door2 .image {
+  width: 100%;
+  height: 100%;
+  background-size: cover;  
+  background-position: center;
+}
+
+.doors .door2:nth-child(33) .image{
+  background-image: url("https://cdn.pixabay.com/photo/2016/03/30/00/23/icon-1289758_1280.png");
+}
+.door2:nth-child(34) .image{
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Godot_icon.svg/1200px-Godot_icon.svg.png?20170822201738");
+}
+.door2:nth-child(35) .image{
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/f/fd/Pencil-icon.gif");
+}
+.door2:nth-child(36) .image{
+  background-image: url("https://cdn.pixabay.com/photo/2017/03/13/23/31/icon-2141485_1280.png");
+}
+
+
+
 .door:hover {
   background-color: orange;
   transform: skewX(-14deg) scale(1.3);
@@ -36,7 +75,7 @@ body {
   height: 100%;
   background-size: cover;
   transform: translateX(-11px) skewX(14deg);
-  background-position: center;
+  background-position: center; 
 }
 .door:nth-child(1) .image { background-image: url("https://raw.githubusercontent.com/ParkYoungWoong/door-selector/main/images/img1.jpg"); }
 .door:nth-child(2) .image { background-image: url("https://raw.githubusercontent.com/ParkYoungWoong/door-selector/main/images/img2.jpg"); }
